--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@gmx-io/sdk": "^1.4.0",
+    "@gmx-io/sdk": "^2.0.0-alpha-1",
     "@headlessui/react": "^2.2.9",
     "@rainbow-me/rainbowkit": "^2.2.10",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.16",
     "@wagmi/connectors": "^7.0.6",
     "@wagmi/core": "^3.0.2",
+    "date-fns": "^4.1.0",
     "ethers": "^6.16.0",
     "lightweight-charts": "^5.1.0",
+    "lodash": "^4.17.21",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router": "^7.11.0",
@@ -28,6 +30,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/lodash": "^4",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
